--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,3 +1,4 @@
+
 <div class="flex flex-col h-screen bg-gray-900 text-gray-100">
   @if (isAuthLoading()) {
     <div class="flex items-center justify-center h-screen bg-gray-900">
@@ -27,7 +28,7 @@
             </div>
           }
   
-          @if (!isDataLoaded()) {
+          @if (!isAppReady()) {
             <div class="flex items-center justify-center h-full">
               <div class="animate-spin rounded-full h-16 w-16 border-b-2 border-blue-500"></div>
             </div>
